src/cmd/internal/gc/y.output

state 0
	$accept: .file $end 
	$$4: .    (4)

	.  reduce 4 (src line 148)

	file  goto 1
	loadsys  goto 2
	$$4  goto 3

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  loadsys.package imports xdcl_list 
	package: .    (2)

	LPACKAGE  shift 5
	.  reduce 2 (src line 131)

	package  goto 4

state 3
	loadsys:  $$4.import_package import_there 

	LPACKAGE  shift 7
	.  error

	import_package  goto 6

state 4
	file:  loadsys package.imports xdcl_list 
	imports: .    (6)

	.  reduce 6 (src line 165)

	imports  goto 8

state 5
	package:  LPACKAGE.sym ';' 

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 9
	hidden_importsym  goto 11

state 6
	loadsys:  $$4 import_package.import_there 
	$$21: .    (21)

	.  reduce 21 (src line 272)

	import_there  goto 14
	$$21  goto 15

state 7
	import_package:  LPACKAGE.LNAME import_safety ';' 

	LNAME  shift 16
	.  error


state 8
	file:  loadsys package imports.xdcl_list 
	imports:  imports.import ';' 
	xdcl_list: .    (219)

	LIMPORT  shift 19
	.  reduce 219 (src line 1537)

	xdcl_list  goto 17
	import  goto 18

state 9
	package:  LPACKAGE sym.';' 

	';'  shift 20
	.  error


state 10
	sym:  LNAME.    (157)

	.  reduce 157 (src line 1113)


state 11
	sym:  hidden_importsym.    (158)

	.  reduce 158 (src line 1122)


state 12
	sym:  '?'.    (159)

	.  reduce 159 (src line 1123)


state 13
	hidden_importsym:  '@'.LLITERAL '.' LNAME 
	hidden_importsym:  '@'.LLITERAL '.' '?' 

	LLITERAL  shift 21
	.  error


state 14
	loadsys:  $$4 import_package import_there.    (5)

	.  reduce 5 (src line 159)


state 15
	import_there:  $$21.hidden_import_list '$' '$' 
	hidden_import_list: .    (345)

	.  reduce 345 (src line 2239)

	hidden_import_list  goto 22

state 16
	import_package:  LPACKAGE LNAME.import_safety ';' 
	import_safety: .    (19)

	LNAME  shift 24
	.  reduce 19 (src line 264)

	import_safety  goto 23

state 17
	file:  loadsys package imports xdcl_list.    (1)
	xdcl_list:  xdcl_list.xdcl ';' 
	xdcl: .    (23)

	$end  reduce 1 (src line 122)
	error  shift 29
	LLITERAL  shift 68
	LBREAK  shift 41
	LCHAN  shift 78
	LCONST  shift 47
	LCONTINUE  shift 42
	LDEFER  shift 44
	LFALL  shift 40
	LFOR  shift 50
	LFUNC  shift 33
	LGO  shift 43
	LGOTO  shift 45
	LIF  shift 53
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LRETURN  shift 46
	LSELECT  shift 52
	LSTRUCT  shift 82
	LSWITCH  shift 51
	LTYPE  shift 32
	LVAR  shift 30
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	';'  reduce 23 (src line 285)
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 56
	expr  goto 48
	fnliteral  goto 73
	for_stmt  goto 35
	if_stmt  goto 38
	non_dcl_stmt  goto 28
	labelname  goto 39
	name  goto 69
	new_name  goto 54
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	select_stmt  goto 37
	simple_stmt  goto 34
	switch_stmt  goto 36
	uexpr  goto 55
	xfndcl  goto 27
	xdcl  goto 25
	expr_list  goto 49
	common_dcl  goto 26
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	lconst  goto 31
	fnlitdcl  goto 76

state 18
	imports:  imports import.';' 

	';'  shift 84
	.  error


state 19
	import:  LIMPORT.import_stmt 
	import:  LIMPORT.'(' import_stmt_list osemi ')' 
	import:  LIMPORT.'(' ')' 

	LLITERAL  shift 88
	LNAME  shift 10
	'('  shift 86
	'.'  shift 90
	'?'  shift 12
	'@'  shift 13
	.  error

	import_here  goto 87
	sym  goto 89
	hidden_importsym  goto 11
	import_stmt  goto 85

state 20
	package:  LPACKAGE sym ';'.    (3)

	.  reduce 3 (src line 138)


state 21
	hidden_importsym:  '@' LLITERAL.'.' LNAME 
	hidden_importsym:  '@' LLITERAL.'.' '?' 

	'.'  shift 91
	.  error


state 22
	import_there:  $$21 hidden_import_list.'$' '$' 
	hidden_import_list:  hidden_import_list.hidden_import 

	LCONST  shift 96
	LFUNC  shift 98
	LIMPORT  shift 94
	LTYPE  shift 97
	LVAR  shift 95
	'$'  shift 92
	.  error

	hidden_import  goto 93

state 23
	import_package:  LPACKAGE LNAME import_safety.';' 

	';'  shift 99
	.  error


state 24
	import_safety:  LNAME.    (20)

	.  reduce 20 (src line 265)


state 25
	xdcl_list:  xdcl_list xdcl.';' 

	';'  shift 100
	.  error


state 26
	xdcl:  common_dcl.    (24)

	.  reduce 24 (src line 290)


state 27
	xdcl:  xfndcl.    (25)

	.  reduce 25 (src line 291)


state 28
	xdcl:  non_dcl_stmt.    (26)

	.  reduce 26 (src line 295)


state 29
	xdcl:  error.    (27)

	.  reduce 27 (src line 300)


state 30
	common_dcl:  LVAR.vardcl 
	common_dcl:  LVAR.'(' vardcl_list osemi ')' 
	common_dcl:  LVAR.'(' ')' 

	LNAME  shift 10
	'('  shift 102
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 105
	dcl_name  goto 104
	dcl_name_list  goto 103
	vardcl  goto 101
	hidden_importsym  goto 11

state 31
	common_dcl:  lconst.constdcl 
	common_dcl:  lconst.'(' constdcl osemi ')' 
	common_dcl:  lconst.'(' constdcl ';' constdcl_list osemi ')' 
	common_dcl:  lconst.'(' ')' 

	LNAME  shift 10
	'('  shift 107
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 105
	dcl_name  goto 104
	dcl_name_list  goto 108
	constdcl  goto 106
	hidden_importsym  goto 11

state 32
	common_dcl:  LTYPE.typedcl 
	common_dcl:  LTYPE.'(' typedcl_list osemi ')' 
	common_dcl:  LTYPE.'(' ')' 

	LNAME  shift 10
	'('  shift 110
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 112
	typedclname  goto 111
	typedcl  goto 109
	hidden_importsym  goto 11

state 33
	xfndcl:  LFUNC.fndcl fnbody 
	fntype:  LFUNC.'(' oarg_type_list_ocomma ')' fnres 

	LNAME  shift 10
	LLT  shift 115
	'('  shift 114
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 116
	fndcl  goto 113
	hidden_importsym  goto 11

state 34
	non_dcl_stmt:  simple_stmt.    (257)

	.  reduce 257 (src line 1764)


state 35
	non_dcl_stmt:  for_stmt.    (258)

	.  reduce 258 (src line 1766)


state 36
	non_dcl_stmt:  switch_stmt.    (259)

	.  reduce 259 (src line 1767)


state 37
	non_dcl_stmt:  select_stmt.    (260)

	.  reduce 260 (src line 1768)


state 38
	non_dcl_stmt:  if_stmt.    (261)

	.  reduce 261 (src line 1769)


state 39
	non_dcl_stmt:  labelname.':' $$262 stmt 

	':'  shift 117
	.  error


state 40
	non_dcl_stmt:  LFALL.    (264)

	.  reduce 264 (src line 1786)


state 41
	non_dcl_stmt:  LBREAK.onew_name 
	onew_name: .    (155)

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  reduce 155 (src line 1107)

	sym  goto 120
	new_name  goto 119
	onew_name  goto 118
	hidden_importsym  goto 11

state 42
	non_dcl_stmt:  LCONTINUE.onew_name 
	onew_name: .    (155)

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  reduce 155 (src line 1107)

	sym  goto 120
	new_name  goto 119
	onew_name  goto 121
	hidden_importsym  goto 11

state 43
	non_dcl_stmt:  LGO.pseudocall 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	'('  shift 67
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 123
	pexpr_no_paren  goto 66
	pseudocall  goto 122
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 44
	non_dcl_stmt:  LDEFER.pseudocall 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	'('  shift 67
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 123
	pexpr_no_paren  goto 66
	pseudocall  goto 126
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 45
	non_dcl_stmt:  LGOTO.new_name 

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 120
	new_name  goto 127
	hidden_importsym  goto 11

state 46
	non_dcl_stmt:  LRETURN.oexpr_list 
	oexpr_list: .    (293)

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  reduce 293 (src line 1935)

	sym  goto 124
	expr  goto 130
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 55
	expr_list  goto 129
	oexpr_list  goto 128
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 47
	lconst:  LCONST.    (38)

	.  reduce 38 (src line 354)


state 48
	simple_stmt:  expr.    (49)
	simple_stmt:  expr.LASOP expr 
	simple_stmt:  expr.LINC 
	simple_stmt:  expr.LDEC 
	expr:  expr.LOROR expr 
	expr:  expr.LANDAND expr 
	expr:  expr.LEQ expr 
	expr:  expr.LNE expr 
	expr:  expr.LLT expr 
	expr:  expr.LLE expr 
	expr:  expr.LGE expr 
	expr:  expr.LGT expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.LANDNOT expr 
	expr:  expr.LLSH expr 
	expr:  expr.LRSH expr 
	expr:  expr.LCOMM expr 
	expr_list:  expr.    (277)

	LASOP  shift 131
	LCOLAS  reduce 277 (src line 1870)
	LANDAND  shift 135
	LANDNOT  shift 150
	LCOMM  shift 153
	LDEC  shift 133
	LEQ  shift 136
	LGE  shift 140
	LGT  shift 141
	LINC  shift 132
	LLE  shift 139
	LLSH  shift 151
	LLT  shift 138
	LNE  shift 137
	LOROR  shift 134
	LRSH  shift 152
	'+'  shift 142
	'-'  shift 143
	'|'  shift 144
	'^'  shift 145
	'*'  shift 146
	'/'  shift 147
	'%'  shift 148
	'&'  shift 149
	'='  reduce 277 (src line 1870)
	','  reduce 277 (src line 1870)
	.  reduce 49 (src line 410)


state 49
	simple_stmt:  expr_list.'=' expr_list 
	simple_stmt:  expr_list.LCOLAS expr_list 
	expr_list:  expr_list.',' expr 

	LCOLAS  shift 155
	'='  shift 154
	','  shift 156
	.  error


state 50
	for_stmt:  LFOR.$$74 for_body 
	$$74: .    (74)

	.  reduce 74 (src line 659)

	$$74  goto 157

state 51
	switch_stmt:  LSWITCH.$$88 if_header $$89 LBODY caseblock_list '}' 
	$$88: .    (88)

	.  reduce 88 (src line 754)

	$$88  goto 158

state 52
	select_stmt:  LSELECT.$$91 LBODY caseblock_list '}' 
	$$91: .    (91)

	.  reduce 91 (src line 777)

	$$91  goto 159

state 53
	if_stmt:  LIF.$$78 if_header $$79 loop_body $$80 elseif_list else 
	$$78: .    (78)

	.  reduce 78 (src line 688)

	$$78  goto 160

state 54
	labelname:  new_name.    (163)

	.  reduce 163 (src line 1167)


state 55
	expr:  uexpr.    (93)

	.  reduce 93 (src line 793)


state 56
	new_name:  sym.    (153)
	name:  sym.    (162)

	':'  reduce 153 (src line 1091)
	.  reduce 162 (src line 1158)


state 57
	uexpr:  pexpr.    (114)
	pseudocall:  pexpr.'(' ')' 
	pseudocall:  pexpr.'(' expr_or_type_list ocomma ')' 
	pseudocall:  pexpr.'(' expr_or_type_list LDDD ocomma ')' 
	pexpr_no_paren:  pexpr.'.' sym 
	pexpr_no_paren:  pexpr.'.' '(' expr_or_type ')' 
	pexpr_no_paren:  pexpr.'.' '(' LTYPE ')' 
	pexpr_no_paren:  pexpr.'[' expr ']' 
	pexpr_no_paren:  pexpr.'[' oexpr ':' oexpr ']' 
	pexpr_no_paren:  pexpr.'[' oexpr ':' oexpr ':' oexpr ']' 

	'('  shift 161
	'.'  shift 162
	'['  shift 163
	.  reduce 114 (src line 877)


state 58
	uexpr:  '*'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 164
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 59
	uexpr:  '&'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 165
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 60
	uexpr:  '+'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 166
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 61
	uexpr:  '-'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 167
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 62
	uexpr:  '!'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 168
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 63
	uexpr:  '~'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 169
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 64
	uexpr:  '^'.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 170
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 65
	uexpr:  LCOMM.uexpr 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 73
	name  goto 69
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 171
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 66
	pexpr_no_paren:  pexpr_no_paren.'{' start_complit braced_keyval_list '}' 
	pexpr:  pexpr_no_paren.    (146)

	'{'  shift 172
	.  reduce 146 (src line 1054)


state 67
	pexpr_no_paren:  '('.expr_or_type ')' '{' start_complit braced_keyval_list '}' 
	pexpr:  '('.expr_or_type ')' 

	LLITERAL  shift 68
	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 180
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 179
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	expr  goto 174
	expr_or_type  goto 173
	fnliteral  goto 73
	name  goto 69
	non_expr_type  goto 175
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 55
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	recvchantype  goto 176
	othertype  goto 178
	fntype  goto 177
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 68
	pexpr_no_paren:  LLITERAL.    (126)

	.  reduce 126 (src line 941)


state 69
	pexpr_no_paren:  name.    (127)

	.  reduce 127 (src line 946)


state 70
	pexpr_no_paren:  pseudocall.    (134)

	.  reduce 134 (src line 984)


state 71
	pexpr_no_paren:  convtype.'(' expr ocomma ')' 

	'('  shift 181
	.  error


state 72
	pexpr_no_paren:  comptype.lbrace start_complit braced_keyval_list '}' 

	LBODY  shift 183
	'{'  shift 184
	.  error

	lbrace  goto 182

state 73
	pexpr_no_paren:  fnliteral.    (139)

	.  reduce 139 (src line 1011)


state 74
	convtype:  fntype.    (181)
	fnlitdcl:  fntype.    (216)

	'('  reduce 181 (src line 1220)
	.  reduce 216 (src line 1514)


state 75
	convtype:  othertype.    (182)
	comptype:  othertype.    (183)

	'('  reduce 182 (src line 1222)
	.  reduce 183 (src line 1224)


state 76
	fnliteral:  fnlitdcl.lbrace stmt_list '}' 
	fnliteral:  fnlitdcl.error 

	error  shift 186
	LBODY  shift 183
	'{'  shift 184
	.  error

	lbrace  goto 185

state 77
	othertype:  '['.oexpr ']' ntype 
	othertype:  '['.LDDD ']' ntype 
	oexpr: .    (291)

	LLITERAL  shift 68
	LCHAN  shift 78
	LDDD  shift 188
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 65
	'+'  shift 60
	'-'  shift 61
	'^'  shift 64
	'*'  shift 58
	'&'  shift 59
	'('  shift 67
	'!'  shift 62
	'~'  shift 63
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  reduce 291 (src line 1929)

	sym  goto 124
	expr  goto 189
	fnliteral  goto 73
	name  goto 69
	oexpr  goto 187
	pexpr  goto 57
	pexpr_no_paren  goto 66
	pseudocall  goto 70
	uexpr  goto 55
	convtype  goto 71
	comptype  goto 72
	interfacetype  goto 81
	structtype  goto 80
	othertype  goto 75
	fntype  goto 74
	hidden_importsym  goto 11
	fnlitdcl  goto 76

state 78
	othertype:  LCHAN.non_recvchantype 
	othertype:  LCHAN.LCOMM ntype 

	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 191
	'*'  shift 197
	'('  shift 196
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	dotname  goto 195
	name  goto 198
	interfacetype  goto 81
	structtype  goto 80
	ptrtype  goto 194
	non_recvchantype  goto 190
	othertype  goto 193
	fntype  goto 192
	hidden_importsym  goto 11

state 79
	othertype:  LMAP.'[' ntype ']' ntype 

	'['  shift 199
	.  error


state 80
	othertype:  structtype.    (196)

	.  reduce 196 (src line 1272)


state 81
	othertype:  interfacetype.    (197)

	.  reduce 197 (src line 1273)


state 82
	structtype:  LSTRUCT.lbrace structdcl_list osemi '}' 
	structtype:  LSTRUCT.lbrace '}' 

	LBODY  shift 183
	'{'  shift 184
	.  error

	lbrace  goto 200

state 83
	interfacetype:  LINTERFACE.lbrace interfacedcl_list osemi '}' 
	interfacetype:  LINTERFACE.lbrace '}' 

	LBODY  shift 183
	'{'  shift 184
	.  error

	lbrace  goto 201

state 84
	imports:  imports import ';'.    (7)

	.  reduce 7 (src line 166)


state 85
	import:  LIMPORT import_stmt.    (8)

	.  reduce 8 (src line 168)


state 86
	import:  LIMPORT '('.import_stmt_list osemi ')' 
	import:  LIMPORT '('.')' 

	LLITERAL  shift 88
	LNAME  shift 10
	')'  shift 203
	'.'  shift 90
	'?'  shift 12
	'@'  shift 13
	.  error

	import_here  goto 87
	sym  goto 89
	hidden_importsym  goto 11
	import_stmt  goto 204
	import_stmt_list  goto 202

state 87
	import_stmt:  import_here.import_package import_there 
	import_stmt:  import_here.import_there 
	$$21: .    (21)

	LPACKAGE  shift 7
	.  reduce 21 (src line 272)

	import_package  goto 205
	import_there  goto 206
	$$21  goto 15

state 88
	import_here:  LLITERAL.    (15)

	.  reduce 15 (src line 224)


state 89
	import_here:  sym.LLITERAL 

	LLITERAL  shift 207
	.  error


state 90
	import_here:  '.'.LLITERAL 

	LLITERAL  shift 208
	.  error


state 91
	hidden_importsym:  '@' LLITERAL '.'.LNAME 
	hidden_importsym:  '@' LLITERAL '.'.'?' 

	LNAME  shift 209
	'?'  shift 210
	.  error


state 92
	import_there:  $$21 hidden_import_list '$'.'$' 

	'$'  shift 211
	.  error


state 93
	hidden_import_list:  hidden_import_list hidden_import.    (346)

	.  reduce 346 (src line 2240)


state 94
	hidden_import:  LIMPORT.LNAME LLITERAL ';' 

	LNAME  shift 212
	.  error


state 95
	hidden_import:  LVAR.hidden_pkg_importsym hidden_type ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 214
	hidden_pkg_importsym  goto 213

state 96
	hidden_import:  LCONST.hidden_pkg_importsym '=' hidden_constant ';' 
	hidden_import:  LCONST.hidden_pkg_importsym hidden_type '=' hidden_constant ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 214
	hidden_pkg_importsym  goto 215

state 97
	hidden_import:  LTYPE.hidden_pkgtype hidden_type ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 214
	hidden_pkg_importsym  goto 217
	hidden_pkgtype  goto 216

state 98
	hidden_import:  LFUNC.hidden_fndcl fnbody ';' 

	'('  shift 220
	'@'  shift 13
	.  error

	hidden_fndcl  goto 218
	hidden_importsym  goto 214
	hidden_pkg_importsym  goto 219

state 99
	import_package:  LPACKAGE LNAME import_safety ';'.    (18)

	.  reduce 18 (src line 247)


state 100
	xdcl_list:  xdcl_list xdcl ';'.    (220)

	.  reduce 220 (src line 1541)


state 101
	common_dcl:  LVAR vardcl.    (28)

	.  reduce 28 (src line 305)


state 102
	common_dcl:  LVAR '('.vardcl_list osemi ')' 
	common_dcl:  LVAR '('.')' 

	LNAME  shift 10
	')'  shift 222
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 105
	dcl_name  goto 104
	dcl_name_list  goto 103
	vardcl  goto 223
	vardcl_list  goto 221
	hidden_importsym  goto 11

state 103
	vardcl:  dcl_name_list.ntype 
	vardcl:  dcl_name_list.ntype '=' expr_list 
	vardcl:  dcl_name_list.'=' expr_list 
	dcl_name_list:  dcl_name_list.',' dcl_name 

	LCHAN  shift 78
	LFUNC  shift 125
	LINTERFACE  shift 83
	LMAP  shift 79
	LNAME  shift 10
	LSTRUCT  shift 82
	LCOMM  shift 233
	'*'  shift 197
	'('  shift 232
	'='  shift 225
	'['  shift 77
	'?'  shift 12
	'@'  shift 13
	','  shift 226
	.  error

	sym  goto 124
	ntype  goto 224
	dotname  goto 231
	name  goto 198
	interfacetype  goto 81
	structtype  goto 80
	ptrtype  goto 230
	recvchantype  goto 227
	othertype  goto 229
	fntype  goto 228
	hidden_importsym  goto 11

state 104
	dcl_name_list:  dcl_name.    (275)

	.  reduce 275 (src line 1860)


state 105
	dcl_name:  sym.    (154)

	.  reduce 154 (src line 1101)


state 106
	common_dcl:  lconst constdcl.    (31)

	.  reduce 31 (src line 318)


state 107
	common_dcl:  lconst '('.constdcl osemi ')' 
	common_dcl:  lconst '('.constdcl ';' constdcl_list osemi ')' 
	common_dcl:  lconst '('.')' 

	LNAME  shift 10
	')'  shift 235
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 105
	dcl_name  goto 104
	dcl_name_list  goto 108
	constdcl  goto 234
	hidden_importsym  goto 11

state 108
	constdcl:  dcl_name_list.ntype '=' expr_list 
	constdcl:  dcl_name_list.'=' expr_list 
	dcl_name_list:  dcl_name_list.',' dcl_name 
